@@ -1,35 +1,0 @@
-../../debian/presubj			usr/share/bug/grub-common
-../../debian/apport/source_grub2.py	usr/share/apport/package-hooks/
-../../debian/grub.d			etc
-
-etc/bash_completion.d
-etc/grub.d
-usr/bin/grub-editenv
-usr/bin/grub-fstest
-usr/bin/grub-kbdcomp
-usr/bin/grub-menulst2cfg
-usr/bin/grub-mkfont
-usr/bin/grub-mkimage
-usr/bin/grub-mklayout
-usr/bin/grub-mkpasswd-pbkdf2
-usr/bin/grub-mkrelpath
-usr/bin/grub-script-check
-usr/sbin/grub-mkconfig
-usr/sbin/grub-mkdevicemap
-usr/sbin/grub-probe
-usr/share/grub
-usr/share/locale
-usr/share/man/man1/grub-editenv.1
-usr/share/man/man1/grub-fstest.1
-usr/share/man/man1/grub-menulst2cfg.1
-usr/share/man/man1/grub-mkfont.1
-usr/share/man/man1/grub-mkimage.1
-usr/share/man/man1/grub-mklayout.1
-usr/share/man/man1/grub-mkpasswd-pbkdf2.1
-usr/share/man/man1/grub-mkrelpath.1
-usr/share/man/man1/grub-script-check.1
-usr/share/man/man8/grub-mkconfig.8
-usr/share/man/man8/grub-mkdevicemap.8
-usr/share/man/man8/grub-probe.8
-usr/bin/grub-mkrescue
-usr/share/man/man1/grub-mkrescue.1
