@@ -20,6 +20,8 @@ grub2 (2.00-1) UNRELEASED; urgency=low
     around merges.
   * Remove pointless debian/grub-mount-udeb.install.hurd-i386;
     grub-mount-udeb is not built on the Hurd.
+  * Refactor debian/grub-common.install.hurd-i386 into .in files so that it
+    imposes less of a maintenance burden.
 
  -- Christian Perrier <bubulle@debian.org>  Sat, 02 Jun 2012 19:51:35 +0200
 
